--- a/freedom-of-travel-app/src/main/resources/application.properties
+++ b/freedom-of-travel-app/src/main/resources/application.properties
@@ -9,6 +9,14 @@ spring.jpa.properties.hibernate.default_schema=public
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.initialization-mode=always
+
 # turn off authentication
-security.basic.enabled=false
-security.ignored=none
+# security.basic.enabled=false
+# security.ignored=none
+
+# Security properties
+freedomOfTravel.app.jwtSecret=freedomOfTravelApp
+# time 1 minutes
+# autoads.app.jwtExpirationMs=240000
+# time 10 minutes
+freedomOfTravel.app.jwtExpirationMs=600000
