--- a/freedom-of-travel-impl/pom.xml
+++ b/freedom-of-travel-impl/pom.xml
@@ -18,6 +18,12 @@
             <artifactId>freedom-of-travel-api</artifactId>
             <version>${revision}</version>
         </dependency>
+        <dependency>
+            <groupId>nc.project</groupId>
+            <artifactId>freedom-of-travel-security</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
 
     </dependencies>
