--- a/freedom-of-travel-impl/pom.xml
+++ b/freedom-of-travel-impl/pom.xml
@@ -25,6 +25,11 @@
             <scope>compile</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
 
     </dependencies>
 
