--- a/freedom-of-travel-app/src/main/resources/application.properties
+++ b/freedom-of-travel-app/src/main/resources/application.properties
@@ -10,13 +10,10 @@ spring.jpa.properties.hibernate.default_schema=public
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.initialization-mode=always
 
-# turn off authentication
-# security.basic.enabled=false
-# security.ignored=none
-
 # Security properties
 freedomOfTravel.app.jwtSecret=freedomOfTravelApp
-# time 1 minutes
-# autoads.app.jwtExpirationMs=240000
+
 # time 10 minutes
 freedomOfTravel.app.jwtExpirationMs=600000
+# time 1 minutes
+# freedomOfTravel.app.jwtExpirationMs=60000
