--- a/freedom-of-travel-app/src/main/resources/application.properties
+++ b/freedom-of-travel-app/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.password=123456
 spring.jpa.properties.hibernate.default_schema=public
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.initialization-mode=always
 
 # Security properties
