verify user by email

--- a/freedom-of-travel-app/src/main/resources/application.properties
+++ b/freedom-of-travel-app/src/main/resources/application.properties
@@ -17,3 +17,14 @@ freedomOfTravel.app.jwtSecret=freedomOfTravelApp
 freedomOfTravel.app.jwtExpirationMs=600000
 # time 1 minutes
 # freedomOfTravel.app.jwtExpirationMs=60000
+
+# Email
+spring.mail.host=smtp.mail.ru
+spring.mail.port=465
+spring.mail.protocol=smtps
+spring.mail.username=freedom.of.travel@mail.ru
+spring.mail.password=${MAIL_APP_PASSWORD}
+
+# Email verification
+freedomOfTravel.app.mail.from=freedom.of.travel@mail.ru
+freedomOfTravel.app.mail.verification.url = /api/verify?code={{verification-code}}&email={{email}}
