Increase token expiration time

--- a/freedom-of-travel-app/src/main/resources/application.properties
+++ b/freedom-of-travel-app/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.datasource.initialization-mode=always
 freedomOfTravel.app.jwtSecret=freedomOfTravelApp
 
 # time 10 minutes
-freedomOfTravel.app.jwtExpirationMs=600000
+freedomOfTravel.app.jwtExpirationMs=6000000
 # time 1 minutes
 # freedomOfTravel.app.jwtExpirationMs=60000
 
